--- a/pages/goods_list/goods_list.wxss
+++ b/pages/goods_list/goods_list.wxss
@@ -1,1 +1,10 @@
-/* pages/goods_list/goods_list.wxss */
+.goods_lists{
+    display:flex;
+    padding:24rpx 30rpx;
+    background:pink;
+    margin-bottom:24rpx;
+}
+.goods_lists .goods_img_box{
+    width:360rpx;
+    height:120rpx;
+}
