--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,10 @@
-/**app.wxss**/
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
+@import '/styles/iconfont.wxss';
+psge,view,text,swiper,swiper-item,navigator{
+  margin:0;
+  padding:0;
   box-sizing: border-box;
-} 
+}
+page{
+  --themeColor:#eb4450;
+  font-size:28rpx;
+}
