--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,10 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-</view>
+<searchBar></searchBar>
+<swiper indicator-dots autoplay circular>
+    <swiper-item
+    wx:for="{{ bannerList }}"
+    wx:key="goods_id">
+        <navigator url="{{ item.navigator_url }}">
+          <image mode="widthFix" src="{{item.image_src}}"></image>
+        </navigator>
+    </swiper-item>
+</swiper>
