--- a/app.wxss
+++ b/app.wxss
@@ -1,5 +1,5 @@
 @import '/styles/iconfont.wxss';
-psge,view,text,swiper,swiper-item,navigator{
+psge,view,text,swiper,swiper-item,scroll-view,navigator{
   margin:0;
   padding:0;
   box-sizing: border-box;
@@ -8,3 +8,4 @@ page{
   --themeColor:#eb4450;
   font-size:28rpx;
 }
+image{width:100%;}
