--- a/pages/goods_list/goods_list.wxml
+++ b/pages/goods_list/goods_list.wxml
@@ -1,10 +1,16 @@
-<!--pages/goods_list/goods_list.wxml-->
-<text>pages/goods_list/goods_list.wxml</text>
-<view class="goods_lists" wx:for="{{ goodsLists }}">
-	<image class="goods_img_box" src="{{ item.goods_big_logo }}"></image>
-	<view class="goods_detail">
-		<view class="goods_title">{{ item.goods_name }}</view>
-		<view class="goods_price">{{ item.goods_price }}</view>
-	</view>
+<searchBar></searchBar>
+<view class="goods_nav">
+	<view class="{{ currentIndex === index ? 'active' : '' }}"
+		wx:for="{{navLists}}"
+		wx:key="*this"
+		data-index="{{index}}"
+		bindtap="changeNav">综合</view>
 </view>
-
+<swiper class="goods_content" 
+	current="{{ currentIndex }}"
+	bindchange="swiperChange">
+	<swiper-item >1</swiper-item>
+	<swiper-item >2</swiper-item>
+	<swiper-item >3</swiper-item>
+</swiper>
+  
