--- a/pages/goods_list/goods_list.wxss
+++ b/pages/goods_list/goods_list.wxss
@@ -1,10 +1,14 @@
-/* pages/goods_list/goods_list.wxss */.goods_lists{
-    display:flex;
-    padding:24rpx 30rpx;
-    background:pink;
-    margin-bottom:24rpx;
+.goods_nav {
+  display: flex;
+  justify-content: space-between;
 }
-.goods_lists .goods_img_box{
-    width:360rpx;
-    height:120rpx;
+.goods_nav .active {
+  color: var(--themeColor);
+  border-bottom-color: var(--themeColor);
+}
+.goods_nav view {
+  flex: 1;
+  text-align: center;
+  line-height: 80rpx;
+  border-bottom: 1px solid #ccc;
 }
